refactor: add pagination support to tmdb endpoints
